Adding info about test state leakage in Angular.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -51,7 +51,115 @@
     "- the **JS event loop** can't continue on to the next thing until your TS code completely returns from whatever it was handling\n",
     "  - so if you change an input to a component and then read something else on the component before returning from a click handler, change detection has had no time to run yet\n",
     "  - You can inject `ChangeDetectorRef` and run `detectChanges()` if you want to do an inline change detection change without returning back to the queue\n",
-    "  - You can also use `markForCheck()` to make sure it runs change detection on something you changed (in a way that Angular won't see), but this will run on the next ordinary change detection run (eg. from the event queue)\n"
+    "  - You can also use `markForCheck()` to make sure it runs change detection on something you changed (in a way that Angular won't see), but this will run on the next ordinary change detection run (eg. from the event queue)\n",
+    "- **Schematics** are a way to customize templated generation of files, such as components in your team's style, etc.\n",
+    "  - I don't remember the low-level details, but you configure somewhere that when you run a command like `ng generate [something]`, the `[something]` part is a schematic (I think)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7ce792ef",
+   "metadata": {},
+   "source": [
+    "# npm Packages to Know\n",
+    "\n",
+    "- **typescript**\n",
+    "  - the TypeScript language compiler, etc.\n",
+    "- **ts-node**\n",
+    "  - interpretter for TypeScript\n",
+    "- **prettier**\n",
+    "  - formatting for TypeScript and a lot of other languages\n",
+    "- **eslint**\n",
+    "  - linter for JS that can be configured to lint TS\n",
+    "- **@angular/cli**\n",
+    "  - Angular CLI plus the main Angular libraries, including forms, routing, etc. etc.\n",
+    "- **angular-in-memory-web-api**\n",
+    "  - lets you mock an HTTP web server so you can write real HTTP code in your app but use hard-coded data localy\n",
+    "\n",
+    "# Angular CLI\n",
+    "\n",
+    "`ng new my-app`\n",
+    "\n",
+    "- creates a folder called _my-app_ in the current folder and initializes it as a default Angular app with a component, module, config files, etc.\n",
+    "\n",
+    "`ng generate component my-stuff`\n",
+    "\n",
+    "- creates a folder called my-stuff in the app and puts component files in it (with selector app-my-stuff which you can easily change) using class name MyStuffComponent, wiring it into the main app module\n",
+    "\n",
+    "`ng g c my-stuff` - shorter way to do `ng generate component`\n",
+    "\n",
+    "- try other abbreviations for fun\n",
+    "\n",
+    "`ng generate component subfolder/my-stuff`\n",
+    "\n",
+    "- put component under specific subfolder (and then its own my-stuff folder)\n",
+    "\n",
+    "`ng generate component subfolder/my-stuff --flat`\n",
+    "\n",
+    "- the `--flat` option means don't make a subfolder for the component itself (but in this case will still go into subfolder)\n",
+    "\n",
+    "`ng generate component my-stuff --module=some-module`\n",
+    "\n",
+    "- changing the module that the generated component goes into\n",
+    "\n",
+    "`ng generate service my-service`\n",
+    "\n",
+    "- generating an injectable service class and test\n",
+    "- by default not in a subfolder, unlike components (flat already)\n",
+    "- all the above options (subfolder, etc.) apply\n",
+    "\n",
+    "`ng generate module my-module`\n",
+    "\n",
+    "- generating a module (eg. a separate module for routing)\n",
+    "- can specify module (eg. your app module) to import it into\n",
+    "- same options as above in terms of subfolders, flattening, etc.\n",
+    "\n",
+    "`ng generate interface my-interface`\n",
+    "\n",
+    "- generates an interface file in the root of the app src\n",
+    "- not really that much easier than just making a file and making an interface, but it's available\n",
+    "\n",
+    "`ng serve`\n",
+    "\n",
+    "- compile and serve the app from the current working directory\n",
+    "- app will be on a localhost port and the url will be posted to the console\n",
+    "- will (usually) automatically rebuild and refresh when changes are detected\n",
+    "- on Windows WSL, that sometimes doesn't work for me and I have to use --poll\n",
+    "- it seems like certain global changes like changing the global styles doesn't auto-refresh - maybe only the compiled JS triggers a refresh\n",
+    "\n",
+    "`ng serve --poll 1000`\n",
+    "\n",
+    "- if auto-compile and refresh is not working after files are changed, try this\n",
+    "- will cause it to check the files itself every **1 second**\n",
+    "\n",
+    "`ng serve --open`\n",
+    "\n",
+    "- automatically open browser pointing to the served app\n",
+    "- even works on WSL w/ Windows version of Chrome\n",
+    "\n",
+    "`ng test`\n",
+    "\n",
+    "- run tests for project of current working directory\n",
+    "- by default karma runner for jasmine tests\n",
+    "- like _ng serve_, it should keep refreshing when you make changes\n",
+    "  - thus you can keep the tests running all the time and change things and see if anything breaks\n",
+    "- like _ng serve_, I have had issues in WSL and have to use --poll\n",
+    "\n",
+    "`ng test --poll 1000`\n",
+    "\n",
+    "- similar to _ng serve_ above, has it look for file changes every **1 second** in case automatic file system watching is broken\n",
+    "\n",
+    "`ng test --browsers=ChromeHeadless`\n",
+    "\n",
+    "- run tests without having to open browser (faster)\n",
+    "- all output visible in terminal\n",
+    "- requires extensive setup of system before you can use it\n",
+    "\n",
+    "`export CHROME_BIN=/mnt/c/Program\\ Files\\ \\(x86\\)/Google/Chrome/Application/chrome.exe`\n",
+    "\n",
+    "- if `ng test` has trouble finding the Windows chrome on WSL in Windows, try this\n",
+    "- for me, it had trouble sometimes and not others, so I added this to my bashrc\n"
    ]
   },
   {
@@ -776,9 +884,36 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "837319cb",
+   "metadata": {},
+   "source": [
+    "## Misc. Examples\n",
+    "\n",
+    "These are from a [project](https://github.com/davidpet/tutorials/tree/master/Angular/misc-examples-for-snippets) I made just to put random snippets in as examples.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "23287cb5",
+   "metadata": {},
+   "source": [
+    "### Test State Leakage\n",
+    "\n",
+    "[This test file](https://github.com/davidpet/tutorials/blob/master/Angular/misc-examples-for-snippets/src/app/test-state-leakage/test-state-leakage.component.spec.ts) demonstrates how state can unexpectedly leak between tests due to variables in `describe` blocks not being scoped the way they look.\n",
+    "\n",
+    "- In summary, variables declared in `describe` blocks should be assumed to live through the whole test suite.\n",
+    "- but `beforeEach` in a `describe` block runs before every single test (from the parent `describe` down to the lowest\n",
+    "  - so you can declare the variables as `undefined` and fill them in within the `beforeEach` blocks\n",
+    "- If you really need to , you can use `afterEach` for cleanup.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe59ebc6",
+   "id": "717792ad",
    "metadata": {},
    "outputs": [],
    "source": []
