Various accumulated updates from doing angular tutorials.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -53,7 +53,9 @@
     "  - You can inject `ChangeDetectorRef` and run `detectChanges()` if you want to do an inline change detection change without returning back to the queue\n",
     "  - You can also use `markForCheck()` to make sure it runs change detection on something you changed (in a way that Angular won't see), but this will run on the next ordinary change detection run (eg. from the event queue)\n",
     "- **Schematics** are a way to customize templated generation of files, such as components in your team's style, etc.\n",
-    "  - I don't remember the low-level details, but you configure somewhere that when you run a command like `ng generate [something]`, the `[something]` part is a schematic (I think)\n"
+    "  - I don't remember the low-level details, but you configure somewhere that when you run a command like `ng generate [something]`, the `[something]` part is a schematic (I think)\n",
+    "- **source maps** are for allowing chrome devtools or another debugger to link the browser's JS code with your TS code\n",
+    "  - similar in concept to C++ symbols\n"
    ]
   },
   {
@@ -370,6 +372,19 @@
     "This is just a special element you can add in your template that **doesn't add** anything to the **DOM**. This can be useful if you don't want to accidentally mess up alignments or styling by adding an extra div, for instance.\n",
     "\n",
     "The purpose of the element would be to hold things like `ngIf` to block child elements from existing.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "3c9bd443",
+   "metadata": {},
+   "source": [
+    "## async pipe\n",
+    "\n",
+    "The async pipe automatically handles subscribing to observables, chaining promises, etc. so that you can treat them as a single synchronous value in a template.\n",
+    "\n",
+    "You will probably need to do an extra `fixture.detectChanges` in your test to interact with a field where an async pipe is used.\n"
    ]
   },
   {
@@ -852,7 +867,7 @@
     "\n",
     "[Setting form control value from TS code.](https://github.com/davidpet/tutorials/commit/073bd629dedb4c03f07974bd24e524e9a85a16ce) - setting FormControl value from TS code\n",
     "\n",
-    "[Listening to observable of form control.](https://github.com/davidpet/tutorials/commit/b5f40cd630426ff667d2ee06a127c8b5454af885) - FormControl.valueChanges stream\n",
+    "[Listening to observable of form control.](https://github.com/davidpet/tutorials/commit/b5f40cd630426ff667d2ee06a127c8b5454af885) - FormControl.valueChanges stream, async pipe\n",
     "\n",
     "[Adding FormGroup w/ multiple levels of values.](https://github.com/davidpet/tutorials/commit/90cd84782a42667653c47fad33598a0e98219d4b) - FormGroup w/ multiple form controls, querying for children\n",
     "\n",
