--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b8f6c01b",
    "metadata": {},
    "outputs": [
@@ -866,6 +866,64 @@
     "\n",
     "  const instance: MyInterface = new MyClass();\n",
     "  instance.greet(); // Output: Greetings!\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "840b7989",
+   "metadata": {},
+   "source": [
+    "# Private Interface Members\n",
+    "\n",
+    "Once you have private members on a class, you cannot use it as a pure interface. You must extend it instead.\n",
+    "\n",
+    "Interfaces cannot have private things.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "65da2494",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "Line 8, Character 9\n  class Employee implements Person {\n________^\nTS2720: Class 'Employee' incorrectly implements class 'Person'. Did you mean to extend 'Person' and inherit its members as a subclass?\n  Property 'age' is missing in type 'Employee' but required in type 'Person'.",
+     "output_type": "error",
+     "traceback": [
+      "Error: Line 8, Character 9",
+      "  class Employee implements Person {",
+      "________^",
+      "TS2720: Class 'Employee' incorrectly implements class 'Person'. Did you mean to extend 'Person' and inherit its members as a subclass?",
+      "  Property 'age' is missing in type 'Employee' but required in type 'Person'.",
+      "    at execTranspile (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:229:23)",
+      "    at Session.transpiler [as transpile] (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/lib/kernel.js:288:35)",
+      "    at Session._runNow (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:835:39)",
+      "    at Session._run (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:786:14)",
+      "    at Session.execute (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/nel/lib/nel.js:929:10)",
+      "    at Kernel.execute_request (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/handlers_v5.js:116:18)",
+      "    at Kernel.onShellMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jp-kernel/lib/jp-kernel.js:285:41)",
+      "    at Socket.<anonymous> (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/jmp/index.js:350:17)",
+      "    at Socket.emit (node:events:511:28)",
+      "    at Socket._emitMessage (/Users/davidpetrofsky/.nvm/versions/node/v20.2.0/lib/node_modules/itypescript/node_modules/zeromq/lib/index.js:649:15)"
+     ]
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  class Person {\n",
+    "    name: string;\n",
+    "    private age: number;\n",
+    "  }\n",
+    "\n",
+    "  // COMPILE ERROR\n",
+    "  class Employee implements Person {\n",
+    "    name: string;\n",
+    "    // It doesn't matter if you include this or not.\n",
+    "    //private age: number;\n",
+    "  }\n",
     "})();\n"
    ]
   },
@@ -1760,9 +1818,106 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "2a8d02af",
+   "metadata": {},
+   "source": [
+    "# 'Override' keyword\n",
+    "\n",
+    "This is a **newer** addition to TypeScript for explicitly specifying that you are **overriding a base method**.\n",
+    "\n",
+    "By default, it is optional, but there is a compiler option (`noImplicitOverride`) to make it mandatory, which **Angular** turns on by default.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "04e0f065",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overridden!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  class MyBaseClass {\n",
+    "    f(): void {}\n",
+    "  }\n",
+    "\n",
+    "  class MySubClass extends MyBaseClass {\n",
+    "    override f(): void {\n",
+    "      console.log(\"overridden!\");\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  const m = new MySubClass() as MyBaseClass;\n",
+    "  m.f();\n",
+    "})();\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "fc5734ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "overridden!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  class MyBaseClass {\n",
+    "    f(): void {}\n",
+    "  }\n",
+    "\n",
+    "  class MySubClass implements MyBaseClass {\n",
+    "    // override keyword NOT ALLOWED if\n",
+    "    // interface instead of base class\n",
+    "    f(): void {\n",
+    "      console.log(\"overridden!\");\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  const m = new MySubClass() as MyBaseClass;\n",
+    "  m.f();\n",
+    "})();\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2186922b",
+   "id": "76b3e5d5",
    "metadata": {},
    "outputs": [],
    "source": []
