--- a/typescript/Collections.ipynb
+++ b/typescript/Collections.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "eafdaef4",
    "metadata": {},
@@ -15,6 +16,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "75abc74a",
    "metadata": {},
@@ -99,6 +101,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ce67f79a",
    "metadata": {},
@@ -215,6 +218,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "41a7d607",
    "metadata": {},
@@ -224,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "id": "d323e336",
    "metadata": {},
    "outputs": [
@@ -264,12 +268,17 @@
     "const [fruit, hasStock, quantity] = tuple2;\n",
     "console.log(fruit); // Output: orange\n",
     "console.log(hasStock); // Output: true\n",
-    "console.log(quantity); // Output: 10"
+    "console.log(quantity); // Output: 10\n",
+    "    \n",
+    "// Don't-care values (_, __, etc.)\n",
+    "const [fruit2, _, quantity2] = tuple2;\n",
+    "console.log(fruit2);\n",
+    "console.log(quantity2);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "id": "1e0f251b",
    "metadata": {},
    "outputs": [
@@ -277,14 +286,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/bin/bash: /home/davidpet/miniconda3/envs/ai/lib/libtinfo.so.6: no version information available (required by /bin/bash)\n",
-      "apple\n",
-      "\u001b[33mtrue\u001b[39m\n",
-      "\u001b[33m2\u001b[39m\n",
-      "\u001b[33m3\u001b[39m\n",
-      "orange\n",
-      "\u001b[33mtrue\u001b[39m\n",
-      "\u001b[33m10\u001b[39m\n"
+      "apple\r\n",
+      "\u001b[33mtrue\u001b[39m\r\n",
+      "\u001b[33m2\u001b[39m\r\n",
+      "\u001b[33m3\u001b[39m\r\n",
+      "orange\r\n",
+      "\u001b[33mtrue\u001b[39m\r\n",
+      "\u001b[33m10\u001b[39m\r\n",
+      "orange\r\n",
+      "\u001b[33m10\u001b[39m\r\n"
      ]
     }
    ],
@@ -293,6 +303,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3cafdbef",
    "metadata": {},
@@ -378,6 +389,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "64d3367f",
    "metadata": {},
@@ -447,6 +459,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "58308ae6",
    "metadata": {},
@@ -520,6 +533,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2748e20c",
    "metadata": {},
@@ -585,6 +599,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "acf282d7",
    "metadata": {},
@@ -593,6 +608,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6492b075",
    "metadata": {},
@@ -603,6 +619,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "57755a4c",
    "metadata": {},
@@ -733,7 +750,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
