--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "id": "ad12fc65",
    "metadata": {},
    "outputs": [
@@ -391,6 +391,7 @@
       "42\n",
       "Hello, world!\n",
       "Hello, world 2!\n",
+      "Hello, world 3!\n",
       "2\n",
       "4\n",
       "6\n"
@@ -402,7 +403,7 @@
        "undefined"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,6 +437,10 @@
     "  const greet2 = (): void => {\n",
     "    console.log(\"Hello, world 2!\");\n",
     "  };\n",
+    "  // You are allowed to execute a statement as the\n",
+    "  // expression when the return type is void. This\n",
+    "  // is a nice difference from Python, for instance.\n",
+    "  const greet3 = () => console.log(\"Hello, world 3!\");\n",
     "\n",
     "  // Lambda function with multiple statements\n",
     "  const printEvenNumbers = (numbers: number[]): void => {\n",
@@ -464,6 +469,7 @@
     "  console.log(getANumber()); // Output: 42\n",
     "  greet(); // Output: Hello, world!\n",
     "  greet2(); // Output: Hello, world 2!\n",
+    "  greet3(); // Output: Hello, world 3!\n",
     "  printEvenNumbers([1, 2, 3, 4, 5, 6]); // Output: 2 4 6\n",
     "})();\n"
    ]
@@ -534,6 +540,51 @@
     "    fn();\n",
     "  }\n",
     "  console.log(y);\n",
+    "})();\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "08d380e6",
+   "metadata": {},
+   "source": [
+    "# Don't-Care Values\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "20778a99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  function f(fn: (a: number, b: number) => number): number {\n",
+    "    return fn(10, 20);\n",
+    "  }\n",
+    "\n",
+    "  // We use _ and __ to ignore the parameters for a lambda\n",
+    "  // when we aren't going to use them.\n",
+    "  console.log(f((_, __) => 12));\n",
     "})();\n"
    ]
   },
