--- a/typescript/Generics.ipynb
+++ b/typescript/Generics.ipynb
@@ -370,9 +370,73 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "bebe25e2",
+   "metadata": {},
+   "source": [
+    "# Void as T\n",
+    "\n",
+    "This comes up in Angular when you want to use a `Subject<void>` and just do `subject.next()` without making up a value.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c610bed9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Box { value: undefined }\n",
+      "Box { value: undefined }\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "  class Box<T> {\n",
+    "    private value: T;\n",
+    "\n",
+    "    constructor(value: T = undefined) {\n",
+    "      this.value = value;\n",
+    "    }\n",
+    "\n",
+    "    getValue(): T {\n",
+    "      return this.value;\n",
+    "    }\n",
+    "\n",
+    "    setValue(value: T): void {\n",
+    "      this.value = value;\n",
+    "    }\n",
+    "  }\n",
+    "\n",
+    "  // use 'undefined' as the thing\n",
+    "  const box: Box<void> = new Box(undefined);\n",
+    "  console.log(box);\n",
+    "\n",
+    "  // just use nothing\n",
+    "  const box2: Box<void> = new Box();\n",
+    "  console.log(box2);\n",
+    "})();\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbead463",
+   "id": "db7abda8",
    "metadata": {},
    "outputs": [],
    "source": []
