--- a/typescript/Strings and Printing.ipynb
+++ b/typescript/Strings and Printing.ipynb
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "48bcea69",
    "metadata": {},
    "outputs": [
@@ -187,6 +187,7 @@
       "{\"name\":\"John\",\"age\":30}\n",
       "{ name: 'John', age: 30 }\n",
       "42\n",
+      "123\n",
       "123\n"
      ]
     },
@@ -196,7 +197,7 @@
        "undefined"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,6 +222,11 @@
     "  const str = \"123\";\n",
     "  const parsedNum = parseInt(str);\n",
     "  console.log(parsedNum); // Output: 123\n",
+    "  // Not 100% equivalent (subtle differences)\n",
+    "  // Number() is a little more strict about\n",
+    "  // rejecting non-number characters.\n",
+    "  const parsedNum2 = Number(str);\n",
+    "  console.log(parsedNum2); // Output: 123\n",
     "\n",
     "  // Note that this is not how you do it in TS\n",
     "  //console.log(string(5))\n",
