--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "0687dab1",
    "metadata": {},
    "outputs": [
@@ -21,7 +21,7 @@
        "undefined"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,6 +51,7 @@
     "  // Array\n",
     "  let numbers: number[] = [1, 2, 3, 4, 5];\n",
     "  let names: Array<string> = [\"Alice\", \"Bob\", \"Charlie\"];\n",
+    "  let emptyArray: number[] = [];\n",
     "\n",
     "  // Custom object\n",
     "  let obj1: { value: number } = { value: 10 };\n",
@@ -608,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "f57a3559",
    "metadata": {},
    "outputs": [
@@ -619,6 +620,7 @@
       "Hello\n",
       "undefined\n",
       "null\n",
+      "undefined\n",
       "undefined\n",
       "undefined\n",
       "Hello\n",
@@ -646,7 +648,7 @@
        "}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,6 +673,11 @@
     "  let uninitializedValue: number;\n",
     "\n",
     "  console.log(uninitializedValue); // Output: undefined\n",
+    "\n",
+    "  // ? and ! declarations are mostly for classes\n",
+    "  //let usesQuestionMark?: string;  // ILLEGAL\n",
+    "  let usesExclamation!: string; // OK\n",
+    "  console.log(usesExclamation); // Output: undefined\n",
     "\n",
     "  // Nullish Coalescing Operator (??)\n",
     "  let value1: string | null = nullableValue ?? \"Default Value\";\n",
