Adding component input/output snippet.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -926,9 +926,27 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0c14ae32",
+   "metadata": {},
+   "source": [
+    "### Component Inputs/Outputs\n",
+    "\n",
+    "[These components](https://github.com/davidpet/tutorials/tree/master/Angular/misc-examples-for-snippets/src/app/inputs-outputs) demonstrate the basics of component input/output. In particular, none of the above tutorials dealt with @Output(), so I did that in here.\n",
+    "\n",
+    "- In summary, inputs are bound by [] from the parent and can be seen as of `ngOnInit` in the lifecycle\n",
+    "  - It's not shown here, but the input can be changed dynamically (see change detection later).\n",
+    "- Inputs can be optional or required depending on how you deal with them.\n",
+    "- Outputs are subject-like streams that emit whatever type you want.\n",
+    "- The parent listens for individual values emitted with () syntax.\n",
+    "- The code that responds to an output uses $event to represent whatever was emitted.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "717792ad",
+   "id": "23470605",
    "metadata": {},
    "outputs": [],
    "source": []
