Adding change detection notes.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -384,7 +384,67 @@
     "\n",
     "The async pipe automatically handles subscribing to observables, chaining promises, etc. so that you can treat them as a single synchronous value in a template.\n",
     "\n",
-    "You will probably need to do an extra `fixture.detectChanges` in your test to interact with a field where an async pipe is used.\n"
+    "You will probably need to do an extra `fixture.detectChanges` in your test to interact with a field where an async pipe is used.\n",
+    "\n",
+    "## Change Detection\n",
+    "\n",
+    "### Overall Process\n",
+    "\n",
+    "1. When a triggering event occurs (user interaction event, observable emitting, http request completing, setTimeout lambda being called, etc.), run change detection process at top of tree (eg. parent component).\n",
+    "2. Check parent component for input binding changes or field changes. The exact checking depends on which strategy the component is configured to use.\n",
+    "3. If any relevant change is found, mark the component dirty and check its children using their strategies, and so on.\n",
+    "4. Call ngOnChanges for dirty components.\n",
+    "5. Re-render dirty components (presumably from the bottom up).\n",
+    "\n",
+    "### Strategy\n",
+    "\n",
+    "- **Default** strategy will check all input bindings and member variables in a value-comparing way\n",
+    "  - if a field in an object (even if nested) or an array value is changed, it will see it\n",
+    "  - this is the most expensive but allows for full mutability of data\n",
+    "- **OnPush** strategy will only check for certain kinds of changes to input bindings and member variables\n",
+    "  - essentially it will do an ===\n",
+    "    - which means primitives will be value compared, but objects and arrays will be referenced compared\n",
+    "  - much less expensive\n",
+    "  - encourages immutability which is cleaner\n",
+    "\n",
+    "### Triggering Default-style Change Detection With OnPush\n",
+    "\n",
+    "There are two ways:\n",
+    "\n",
+    "1. Change the object reference of an input binding of the component to be triggered by using the **slice operator** to copy the object (eg. you could use a **getter** to make this transparent and use immuatable style).\n",
+    "2. Inject `ChangeDetectorRef` and call `markForCheck()`.\n",
+    "\n",
+    "### ngOnChanges\n",
+    "\n",
+    "In theory, ngOnChanges is supposed to hook all change detection dirtiness, but in my testing, it only detects what OnPush change detection would pick up, even if you're using default. Thus, you can see a lot of re-renders that are not signaleld by ngOnChanges.\n",
+    "\n",
+    "ngOnChanges runs in between checking for dirtiness and updating the view.\n",
+    "\n",
+    "### Parent-Child Propagation\n",
+    "\n",
+    "Change detection normally flows down from the root component and only checks children whose parents have been marked dirty. However, it is still possible for children to be dirty when their parents aren't, such as when using `markForCheck()`.\n",
+    "\n",
+    "If a parent has OnPush, that may restrict when the child gets to run based on changes to the parent.\n",
+    "\n",
+    "### ChangeDetectorRef\n",
+    "\n",
+    "You can inject ChangeDetectorRef in your component and call methods to manage change detection for the component.\n",
+    "\n",
+    "`markForCheck()` will cause a component to be checked for changes using the **Default** strategy (even if it's an OnPush component) regardless of the parent status. It can be used for the following scenarios:\n",
+    "\n",
+    "- if the code has to make a change to a property of an object and OnPush is being used\n",
+    "  - an alternative to doing this would be to use slicing to copy the object so that its reference is different\n",
+    "- if some async code such as an http call or observable needs to change the state of the object independently of any bindings from the parent\n",
+    "\n",
+    "`detectChanges()` manually triggers the whole change detection process on a component and its children. It is used in conjunction with `detatch()` to take full control over when change detection occurs, such as when change detection is very expensive for a component and you want to make it happen at certain intervals.\n",
+    "\n",
+    "### Implementation Details\n",
+    "\n",
+    "In JS (and thus TS), you can patch any symbol with your own version and call the original as a wrapper. There is a library called **Zone.js** that does this for Angular. It wraps all the major event handlers so that the originals still happen but with Angular also doing its own stuff such as change detection.\n",
+    "\n",
+    "A side effect of this is that APIs that aren't known to Zone.js will not trigger change detection.\n",
+    "\n",
+    "Note that because of the way it's designed, there are **no cycles**. A binding change may cause a view change, but it won't feedback and cause more binding changes. Two-way binding in forms is designed to not cause a cycle.\n"
    ]
   },
   {
@@ -944,9 +1004,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "27f1c660",
+   "metadata": {},
+   "source": [
+    "### Change Detection\n",
+    "\n",
+    "[These two classes](https://github.com/davidpet/tutorials/tree/master/Angular/misc-examples-for-snippets/src/app/change-detection) show a little bit of testing of change detection. The only really relevant thing to take from it for other things is how to set the **change detection strategy** on a component though.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23470605",
+   "id": "d3c7a169",
    "metadata": {},
    "outputs": [],
    "source": []
