Adding @ViewChild()/@ViewChildren() info.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -1015,9 +1015,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c637053c",
+   "metadata": {},
+   "source": [
+    "### ViewChild()/ViewChildren()\n",
+    "\n",
+    "[This component](https://github.com/davidpet/tutorials/tree/master/Angular/misc-examples-for-snippets/src/app/view-child) shows the basics of using @ViewChild() and @ViewChildren().\n",
+    "\n",
+    "@ViewChild() can be a component type (to let you interact with the class) or a native element (and a few other options not demonstrated). It is changed on each change detection round to point to the first result found in the DOM of the component.\n",
+    "\n",
+    "@Viewchildren() is a list version of @ViewChild(), and instead of being rebound on change detection, it emits an observable you can listen to.\n",
+    "\n",
+    "Both are `undefined` in `ngOnInit` and then set for the first time in `afterViewInit`.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3c7a169",
+   "id": "55fa58dc",
    "metadata": {},
    "outputs": [],
    "source": []
