Adding content projection notes.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -1032,9 +1032,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "7161e2b1",
+   "metadata": {},
+   "source": [
+    "### Content Projection (transclusion)\n",
+    "\n",
+    "[These components](https://github.com/davidpet/tutorials/tree/master/Angular/misc-examples-for-snippets/src/app/content-projection) show the very basics of content projection.\n",
+    "\n",
+    "It shows single-slot (no selector), multi-slot (selector), calling a click handler from the projected code, the order and structure of projected content, etc.\n",
+    "\n",
+    "For more complex scenarios, such as including multiple times or conditionally, see `ng-template`.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55fa58dc",
+   "id": "f75cc19c",
    "metadata": {},
    "outputs": [],
    "source": []
