Adding notes from directives.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -81,6 +81,8 @@
     "\n",
     "# Angular CLI\n",
     "\n",
+    "NOTE: remember in all these examples, **don't put the word** directive, component, module, etc. in the name of the thing because that will be added already. It was done here just to make it clear what each token was meant to be for in the CLI examples.\n",
+    "\n",
     "`ng new my-app`\n",
     "\n",
     "- creates a folder called _my-app_ in the current folder and initializes it as a default Angular app with a component, module, config files, etc.\n",
@@ -109,6 +111,13 @@
     "\n",
     "- generating an injectable service class and test\n",
     "- by default not in a subfolder, unlike components (flat already)\n",
+    "- all the above options (subfolder, etc.) apply\n",
+    "\n",
+    "`ng generate directive my-directive`\n",
+    "\n",
+    "- generating a directive and test file\n",
+    "- by default not in a subfolder, unlike components (flat already)\n",
+    "  - the reason is because directives are in 1 file instead of multiple\n",
     "- all the above options (subfolder, etc.) apply\n",
     "\n",
     "`ng generate module my-module`\n",
@@ -1047,9 +1056,26 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "24e6fd28",
+   "metadata": {},
+   "source": [
+    "### Directives\n",
+    "\n",
+    "[This folder](https://github.com/davidpet/tutorials/tree/master/Angular/misc-examples-for-snippets/src/app/directives) shows 2 directives: one using an attribute, and one using a class. They both work the same - only the selector is different.\n",
+    "\n",
+    "A directive is basically a component without a template. It attaches input bindings and output events onto its host component.\n",
+    "\n",
+    "The example above also show interacting with the DOM element the directive is attached to, within the change detection system of Angular.\n",
+    "\n",
+    "Note that things like `@HostListener` and `ElementRef` could be used on components too if you wanted to.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f75cc19c",
+   "id": "b971c13f",
    "metadata": {},
    "outputs": [],
    "source": []
